--- a/dashApp/requirements.txt
+++ b/dashApp/requirements.txt
@@ -31,6 +31,7 @@ pandas==0.23.4
 patsy==0.5.1
 plotly==4.1.0
 plotly-express==0.4.0
+psycopg2==2.8.4
 pymongo==3.7.2
 pyparsing==2.4.0
 pyrsistent==0.14.11
@@ -44,7 +45,7 @@ scikit-learn==0.20.0
 scipy==1.1.0
 seaborn==0.9.0
 six==1.12.0
-statsmodels==0.10.0
+statsmodels==0.10.0rc2
 traitlets==4.3.2
 urllib3==1.22
 Werkzeug==0.15.4
